--- a/http-rpc-test/http-rpc-test-consumer/.gitignore
+++ b/http-rpc-test/http-rpc-test-consumer/.gitignore
@@ -1,15 +1,4 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
+HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
