--- a/http-rpc-spring-boot-autoconfigurer/pom.xml
+++ b/http-rpc-spring-boot-autoconfigurer/pom.xml
@@ -32,6 +32,20 @@
             <artifactId>http-rpc-spring-boot</artifactId>
         </dependency>
 
+        <!--    ===================================================    -->
+        <!--    default impl    -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+        <!--    ===================================================    -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!--    ===================================================    -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
