--- a/http-rpc-test/http-rpc-test-consumer/pom.xml
+++ b/http-rpc-test/http-rpc-test-consumer/pom.xml
@@ -18,6 +18,8 @@
     <properties>
         <java.version>1.8</java.version>
         <swagger.version>2.7.0</swagger.version>
+
+        <httpclient.version>4.5.5</httpclient.version>
     </properties>
 
     <dependencies>
@@ -56,6 +58,12 @@
             <groupId>com.photowey</groupId>
             <artifactId>http-rpc-spring-boot-starter</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
         </dependency>
     </dependencies>
 
