--- a/http-rpc-test/http-rpc-test-consumer/pom.xml
+++ b/http-rpc-test/http-rpc-test-consumer/pom.xml
@@ -20,6 +20,7 @@
         <swagger.version>2.7.0</swagger.version>
 
         <httpclient.version>4.5.5</httpclient.version>
+        <hrpc.version>1.0.0</hrpc.version>
     </properties>
 
     <dependencies>
@@ -57,7 +58,7 @@
         <dependency>
             <groupId>com.photowey</groupId>
             <artifactId>http-rpc-spring-boot-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${hrpc.version}</version>
         </dependency>
 
         <dependency>
