--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.photowey</groupId>
     <artifactId>http-rpc-framework</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <inceptionYear>2020</inceptionYear>
 
     <name>http-rpc-framework</name>
@@ -149,22 +149,5 @@
         <module>http-rpc-spring-boot-autoconfigurer</module>
         <module>http-rpc-spring-boot-starter</module>
     </modules>
-
-    <distributionManagement>
-        <repository>
-            <id>nexus-releases</id>
-            <name>Nexus Release Repository</name>
-            <url>
-                http://47.105.115.124:8081/repository/cloud-tube-releases/
-            </url>
-        </repository>
-        <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <name>Nexus Snapshot Repository</name>
-            <url>
-                http://47.105.115.124:8081/repository/cloud-tube-snapshots/
-            </url>
-        </snapshotRepository>
-    </distributionManagement>
 
 </project>
