--- a/http-rpc-spring-boot/pom.xml
+++ b/http-rpc-spring-boot/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.photowey</groupId>
         <artifactId>http-rpc-framework</artifactId>
-        <version>1.0.0</version>
+        <version>1.1.0</version>
     </parent>
 
     <groupId>com.photowey</groupId>
@@ -41,6 +41,14 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--    use     -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
