--- a/http-rpc-test/http-rpc-test-consumer/pom.xml
+++ b/http-rpc-test/http-rpc-test-consumer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.photowey</groupId>
         <artifactId>http-rpc-test</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <groupId>com.photowey</groupId>
@@ -16,11 +16,6 @@
     <description>http-rpc-test-consumer project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
-        <swagger.version>2.7.0</swagger.version>
-
-        <httpclient.version>4.5.5</httpclient.version>
-        <hrpc.version>1.0.0</hrpc.version>
     </properties>
 
     <dependencies>
@@ -58,13 +53,11 @@
         <dependency>
             <groupId>com.photowey</groupId>
             <artifactId>http-rpc-spring-boot-starter</artifactId>
-            <version>${hrpc.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
         </dependency>
     </dependencies>
 
