--- a/http-rpc-test/http-rpc-test-provider/pom.xml
+++ b/http-rpc-test/http-rpc-test-provider/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.photowey</groupId>
         <artifactId>http-rpc-test</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <groupId>com.photowey</groupId>
