--- a/http-rpc-test/pom.xml
+++ b/http-rpc-test/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.photowey</groupId>
     <artifactId>http-rpc-test</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <name>http-rpc-test</name>
     <packaging>pom</packaging>
 
@@ -21,6 +21,9 @@
         <swagger.version>2.7.0</swagger.version>
         <fastjson.version>1.2.73</fastjson.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+
+        <httpclient.version>4.5.5</httpclient.version>
+        <hrpc.version>1.1.0</hrpc.version>
     </properties>
 
     <dependencies>
@@ -43,6 +46,18 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.photowey</groupId>
+                <artifactId>http-rpc-spring-boot-starter</artifactId>
+                <version>${hrpc.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
